# Bridge

./: .gitignore  CMakeLists.txt  Makefile
Bridge-Cursor/: .gitignore  CMakeLists.txt  RELEASE.md
Bridge-Cursor/Source/: BassPanel.cpp  BridgeControlMetrics.h  BridgeEditorChromeLookAndFeel.cpp  BridgeHeaderBar.h  BridgeIconPaths.h  BridgeInstrumentStripStyle.h  BridgeInstrumentStyles.h  BridgeInstrumentTabTile.h  BridgeLookAndFeel.cpp  BridgeLoopRangeStrip.cpp  BridgePanelLayout.h  BridgePhrase.h  BridgeProcessor.cpp  BridgeSettingsDialog.cpp  BridgeSettingsDialog.h  BridgeUpdateChecker.cpp  BridgeUpdateChecker.h  BridgeVelocityStrip.cpp  BridgeXYPad.cpp  BridgeXYPad.h  GuitarPanel.cpp  GuitarPanel.h  LeaderStylePresets.h  MainPanel.cpp  MainPanel.h  MelodicGridLayout.h  PianoPanel.h
Bridge-Cursor/Source/bass/: BassEngine.h
Bridge-Cursor/Source/guitar/: GuitarLookAndFeel.h  GuitarStylePresets.h
Bridge-Cursor/Source/ml/: BridgeMLManager.cpp  BridgeModelRunner.h
Bridge-Cursor/Source/piano/: PianoEngine.cpp  PianoLookAndFeel.h
Bridge-Cursor/Tests/: DrumHumanFeelMetricsTests.cpp  GridPatternParityTests.cpp  MorphRangeTests.cpp  ProcessorStateTests.cpp  SharedLayoutConstantsTests.cpp  StateMigrationTests.cpp  TonalityEngineSyncTests.cpp  UnifiedStyleRegistryTests.cpp
Bridge-Cursor/design/: README.md
Bridge-Cursor/installer/: README.md  build_installer_mac.sh
Bridge-Cursor/libs/onnxruntime/: README.md
Bridge-Cursor/ml/models/: chords_model.onnx  drum_humanizer.onnx.data  melody_model.onnx  melody_model.onnx.data
Bridge-Cursor/ml/training/: chords_onnx_student.py  drum_onnx_student.py  guitar_model.py  melody_onnx_student.py  piano_model.py  quality_metrics.py  test_inference.py  train_chords.ipynb  train_melody.ipynb  validate_midi_output.py
Bridge-Cursor/ml/training/test_fixtures/: simple_groove.mid
Bridge-Cursor/ml/training/utils/: dataset_utils.py
Source/: AnimalPanel.cpp  AnimalPanel.h  BassPanel.cpp  BassPanel.h  BootsyPanel.cpp  BootsyPanel.h  BridgeAppleHIG.h  BridgeArrangementStrip.cpp  BridgeArrangementStrip.h  BridgeBottomHalf.cpp  BridgeBottomHalf.h  BridgeControlMetrics.h  BridgeEditor.cpp  BridgeEditor.h  BridgeEditorChromeLookAndFeel.h  BridgeHeaderBar.cpp  BridgeHeaderBar.h  BridgeInstrumentStripStyle.h  BridgeInstrumentStyles.h  BridgeInstrumentTabRail.cpp  BridgeInstrumentTabRail.h  BridgeInstrumentTabTile.cpp  BridgeInstrumentTabTile.h  BridgeInstrumentUI.h  BridgeLookAndFeel.cpp  BridgeLookAndFeel.h  BridgeLoopRangeStrip.cpp  BridgeLoopRangeStrip.h  BridgeMainLoopKnobAttachment.h  BridgeMidiClipEditor.cpp  BridgeMidiClipEditor.h  BridgeModelBundle.cpp  BridgeModelBundle.h  BridgePanelLayout.h  BridgePhrase.h  BridgeProcessor.cpp  BridgeProcessor.h  BridgeScaleHighlight.h  BridgeSettingsDialog.cpp  BridgeSettingsDialog.h  (+22 more)
Source/animal/: AnimalLookAndFeel.h  AnimalStylePresets.h  DrumEngine.cpp  DrumEngine.h
Source/bass/: BassEngine.cpp  BassEngine.h  BassLookAndFeel.h  BassStylePresets.h
Source/bootsy/: BassEngine.cpp  BassEngine.h  BootsyLookAndFeel.h  BootsyStylePresets.h
Source/bridge_clip/: BridgeClipNote.h  BridgeClipTimeline.cpp  BridgeClipTimeline.h
Source/drums/: DrumEngine.cpp  DrumEngine.h  DrumPatternMetrics.h  DrumsLookAndFeel.h  DrumsStylePresets.h
Source/guitar/: GuitarEngine.cpp  GuitarEngine.h  GuitarLookAndFeel.h  GuitarStylePresets.h
Source/ml/: BridgeMLManager.cpp  BridgeMLManager.h  BridgeModelRunner.cpp
Source/paul/: GuitarEngine.cpp  GuitarEngine.h  PaulLookAndFeel.h  PaulStylePresets.h
Source/piano/: PianoEngine.cpp  PianoEngine.h  PianoLookAndFeel.h  PianoStylePresets.h
Source/stevie/: PianoEngine.cpp  PianoEngine.h  StevieLookAndFeel.h  StevieStylePresets.h
Tests/: ApvtsLayoutRegistryTests.cpp  BridgeClipTimelineTests.cpp  BridgeQaTestHelpers.h  BridgeTests_main.cpp  DrumsHouseComplexityMonotonicityTests.cpp  LeaderStyleTests.cpp  MLModelSmokeTests.cpp  MelodicHumanFeelMetricsTests.cpp  MorphRangeTests.cpp  PresetConsistencyTests.cpp  ProcessorMidiAndFlushTests.cpp  StateMigrationTests.cpp
design/: README.md
installer/: build_installer_win.ps1
ml/: README.md
ml/models/: bass_model.onnx  bass_model.onnx.data  chords_model.onnx  chords_model.onnx.data  drum_humanizer.onnx  melody_model.onnx
ml/training/: bass_model.py  bass_onnx_student.py  bundle.py  drum_humanizer.py  drum_onnx_student.py  generate_preset_report.py  knob_calibration.py  knob_mapping.py  magenta_data_utils.py  magenta_pipeline.py  model_registry.py  onnx_runtime_inputs.py  personality_presets.json  personality_presets.py  rebuild_models_local.py  requirements.txt  retrain_pipeline.py  snapshot_tests.py  train_bass.ipynb  train_drums.ipynb
ml/training/test_fixtures/: build_simple_groove.py
ml/training/utils/: midi_utils.py
